--- a/app/src/main/res/layout/list_item_widget.xml
+++ b/app/src/main/res/layout/list_item_widget.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/appwidget_ingredients"
+        android:id="@+id/appwidget_favorite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
