--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="colorAccent">#D81B60</color>
     <color name="grey">#BDBDBD</color>
+    <color name="Transparent">#00000000</color>
+    <color name="gray">#A7A7A2</color>
+    <color name="white">#FFFFFF</color>
 </resources>
